About page main block image adaptive, fix width text wrap.

--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -16,6 +16,9 @@
       z-index: 0
       position: absolute
       bottom: 0
+      max-width: 100%
+      max-height: 100%
+      height: auto
       +rmin(1024)
         left: -15%
       +rmin(1440)
@@ -39,10 +42,7 @@
 
     &-row
       float: right
-      +rmin(1024)
-        width: 60%
-      +rmin(1440)
-        width: 50%
+      width: 50%
 
     &-text
       +rmin(1024)
